--- a/plugins/weather/weather.html
+++ b/plugins/weather/weather.html
@@ -6,11 +6,10 @@
 На сегодня погоды нет ☹<br>
 <small>
   Информация для специалистов:<br>
-  {{ instance.e }}
+  {{ instance.except }}
 </small>
 {% else %}
 <div class="grey_font">
-  {{ instance.er }}
   {% if instance.HEAT.min > 15 %}☺{% else %}☹{% endif %} Средняя температура: {{ instance.HEAT.min }} °С<br>
   ➜ Средняя скорость ветра: {{ instance.WIND.min }} - {{ instance.WIND.max }} м/с<br>
   ⚖ Атмосферное давление: {{ instance.PRESSURE.max }} мм.рт.с<br>
